@@ -37,7 +37,7 @@ class EU3Diplomacy
 };
 
 // Types of agreements:
-//open_market - eventually care
+//open_market - care
 //casus_belli - care
 //royal_marriage - care
 //guarantee - care
